--- a/styles.css
+++ b/styles.css
@@ -62,7 +62,7 @@ button {
 }
 
 button:hover {
-    background-color: rgba(131, 15, 121, 0.7); /* Ajuste a opacidade no hover */
+    background-color: rgba(255, 255, 255, 0.24); /* Ajuste a opacidade no hover */
 }
 
 
@@ -93,5 +93,10 @@ pre::-webkit-scrollbar-thumb {
 pre::-webkit-scrollbar-track {
     background: transparent; /* Fundo transparente para a trilha */
 }
+
+.hidden {
+    display: none;
+}
+
 
 
