--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@
 /* Estilos gerais */
 body {
     font-family: Arial, sans-serif;
-    background-image: url('1.jpg');
+    background-image: url('5.jpg');
     background-size: cover;
     background-position: center;
     background-attachment: fixed; /* Faz a imagem de fundo ficar fixa */
@@ -43,8 +43,10 @@ select {
     max-width: 350px;
     border: 1px solid #444;
     border-radius: 5px;
-    background-color: rgba(30, 30, 30, 0.8);
-    color: #e0e0e0;
+    background-color: transparent; /* Fundo transparente */
+    color: #e0e0e0; /* Cor do texto */
+    appearance: none; /* Remove o estilo padrão do select */
+    outline: none; /* Remove o contorno ao focar */
 }
 
 /* Estilos do input */
@@ -55,7 +57,7 @@ input {
     max-width: 50px;
     border: 1px solid #444;
     border-radius: 5px;
-    background-color: rgba(30, 30, 30, 0.8);
+    background-color: transparent;
     color: #e0e0e0;
 }
 
