--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,8 @@
 
-/* Estilos gerais */
+
 body {
     font-family: Arial, sans-serif;
-    background-image: url('5.jpg');
+    background-image: url('./imagens/5.jpg');
     background-size: cover;
     background-position: center;
     background-attachment: fixed; /* Faz a imagem de fundo ficar fixa */
@@ -34,8 +34,9 @@ body {
     margin-bottom: 10px;
 }
 
-/* Estilos do select */
+
 select {
+    appearance: none;
     padding: 10px;
     font-size: 16px;
     margin-right: 10px;
@@ -49,7 +50,7 @@ select {
     outline: none; /* Remove o contorno ao focar */
 }
 
-/* Estilos do input */
+
 input {
     padding: 10px;
     font-size: 16px;
@@ -61,7 +62,7 @@ input {
     color: #e0e0e0;
 }
 
-/* Estilos do botão */
+
 button {
     padding: 10px;
     font-size: 16px;
@@ -74,14 +75,22 @@ button {
     max-width: 400px;
 }
 
+input:hover {
+    background-color: rgba(255, 255, 255, 0.24); /* Ajuste a opacidade no hover */
+}
+
 button:hover {
     background-color: rgba(255, 255, 255, 0.24); /* Ajuste a opacidade no hover */
 }
 
+select:hover {
+    background-color: rgba(255, 255, 255, 0.24); /* Ajuste a opacidade no hover */
+}
 
-/* Estilos do campo pre */
+
+
 pre {
-    background-color: rgba(30, 30, 30, 0.5);
+    background-color: transparent;
     border: 1px solid #444;
     padding: 10px;
     border-radius: 5px;
@@ -93,10 +102,11 @@ pre {
     color: #e0e0e0;
 }
 
-/* Estilos para a barra de rolagem */
+
 pre::-webkit-scrollbar {
     width: 10px; /* Largura da barra de rolagem */
 }
+
 
 pre::-webkit-scrollbar-thumb {
     background-color: rgba(100, 100, 100, 0.5); /* Cor da barra de rolagem */
