--- a/styles.css
+++ b/styles.css
@@ -122,4 +122,19 @@ pre::-webkit-scrollbar-track {
 }
 
 
+.button-container button {
+    padding: 10px;
+    font-size: 16px;
+    width: 100%;
+    width: 200px; /* Largura fixa para os botões */
+    padding: 10px;
+    background-color: transparent; /* Fundo transparente */
+    border: 1px solid #444;
+    color: white;
+    border-radius: 5px;
+    cursor: pointer;
+}
 
+.button-container button:hover {
+    background-color: rgba(255, 255, 255, 0.24); /* Ajuste a opacidade no hover */
+}
