--- a/styles.css
+++ b/styles.css
@@ -3,11 +3,12 @@ body {
     padding: 0; /* Removendo o padding do body */
     height: 100vh; /* Garante que o body ocupe a altura total da tela */
     font-family: Arial, sans-serif;
-    color: #e0e0e0;
     background-image: url('./imagens/5.jpg');
     background-size: cover;
     background-position: center;
-    background-attachment: fixed; /* Faz a imagem de fundo ficar fixa */
+    background-attachment: fixed;
+    background-color: black;
+    transition: background-image 0.5s ease-in-out; /* Faz a imagem de fundo ficar fixa */
 }
 
 @font-face {
@@ -44,6 +45,7 @@ select {
     outline: none; /* Remove o contorno ao focar */
     cursor: pointer;
     appearance: none;
+
 }
 
 input {
